# ChangeLog for games-arcade/monkey-bubble
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-arcade/monkey-bubble/ChangeLog,v 1.7 2004/03/05 08:39:36 mr_bones_ Exp $

  05 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org>
  monkey-bubble-0.1.6.ebuild:
  filter-flags in src_unpack

  04 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org>
  monkey-bubble-0.1.3.ebuild, monkey-bubble-0.1.5.ebuild:
  tidy older versions

*monkey-bubble-0.1.6 (06 Oct 2003)

  06 Oct 2003; Michael Sterrett <mr_bones_@gentoo.org>
  monkey-bubble-0.1.6.ebuild:
  version bump; gcc-2.95 patch was added upstream.

  05 Oct 2003; Michael Sterrett <mr_bones_@gentoo.org>
  monkey-bubble-0.1.5.ebuild, files/gcc-295.patch:
  Added gcc-295.patch from TGL via (bug 30448)

  05 Oct 2003; Michael Sterrett <mr_bones_@gentoo.org> metadata.xml,
  monkey-bubble-0.1.5.ebuild:
  tidy DEPEND; add metadata.xml

*monkey-bubble-0.1.5 (05 Oct 2003)

  05 Oct 2003; Michael Sterrett <mr_bones_@gentoo.org>
  monkey-bubble-0.1.5.ebuild:
  version bump (bug 30448)

*monkey-bubble-0.1.3 (25 Sep 2003)

  25 Sep 2003; Michael Sterrett <msterret@gentoo.org>
  monkey-bubble-0.1.3.ebuild:
  initial commit; ebuild modified from one submitted by Minati jean michel via
  bug 29573
