@@ -1,4 +1,6 @@
-MD5 55d8d3b5c8d9359875c2d4b313806155 files/digest-monkey-bubble-0.1.6 72
 MD5 1fdf22ebe9baaf123299287f31dfdabe ChangeLog 1308
-MD5 3f11aaf297b2fe67404a96cda13e9bfe metadata.xml 251
+MD5 d70b3920334d5ffbaffa4127e2ecc30d monkey-bubble-0.1.9.ebuild 837
 MD5 fde14da2b3ec4113468c447fcd50ab4b monkey-bubble-0.1.6.ebuild 830
+MD5 3f11aaf297b2fe67404a96cda13e9bfe metadata.xml 251
+MD5 fe7c47c3a5c9b1af15432fe822367b4e files/digest-monkey-bubble-0.1.9 72
+MD5 55d8d3b5c8d9359875c2d4b313806155 files/digest-monkey-bubble-0.1.6 72
