@@ -1,6 +1,13 @@
 # ChangeLog for games-arcade/monkey-bubble
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/monkey-bubble/ChangeLog,v 1.7 2004/03/05 08:39:36 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/monkey-bubble/ChangeLog,v 1.8 2004/04/07 03:45:10 mr_bones_ Exp $
+
+*monkey-bubble-0.1.9 (06 Apr 2004)
+
+  06 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org>
+  monkey-bubble-0.1.9.ebuild:
+  version bump; using the gnome2 eclass now instead of games because it's very
+  tight with gnome now.
 
   05 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org>
   monkey-bubble-0.1.6.ebuild:
